--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "test:ui": "vitest --ui"
   },
   "dependencies": {
+    "@formspree/react": "^3.0.0",
     "@reduxjs/toolkit": "^2.9.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-google-recaptcha": "^3.1.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.9.1"
   },
