--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@formspree/react": "^3.0.0",
     "@reduxjs/toolkit": "^2.9.0",
     "@supabase/supabase-js": "^2.74.0",
+    "lucide-react": "^0.545.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-google-recaptcha": "^3.1.0",
+    "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.9.1"
+    "react-router-dom": "^7.9.1",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.28.4",
